--- a/1.CSharpLanguage/1.11.Reflection/1.11.2.InversionOfControl/Ioc/app.config
+++ b/1.CSharpLanguage/1.11.Reflection/1.11.2.InversionOfControl/Ioc/app.config
@@ -3,6 +3,6 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
   <appSettings>
     <add key="CryptoType" value="LeftShiftCrypto"/>
-    <!--ReverseCrypto：倒序加密；LeftShiftCrypto：左移加密；HexadecimalCrypto：十六进制加密-->
+    <!--ReverseCrypto：倒序加密；LeftShiftCrypto：左移加密；HexCrypto：十六进制加密-->
   </appSettings>
 </configuration>
